<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_notification">
        <ListPreference
            android:key="remind_time"
            android:title="@string/settings_time_remind_title"
            android:summary="@string/settings_time_remind_summary"
            android:defaultValue="4"
            android:entries="@array/remind_time"
            android:entryValues="@array/remind_time_values"/>

        <CheckBoxPreference
            android:key="perform_repeat"
            android:title="@string/settings_repeat_title"
            android:summary="@string/settings_repeat_summary"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="@string/settings_perform_sound"
            android:title="@string/settings_sound_title"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="@string/settings_perform_vibrate"
            android:title="@string/settings_vibrate_title"
            android:defaultValue="true"/>

    </PreferenceCategory>
</PreferenceScreen>