<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/schedule" />
        <item
            android:id="@+id/reminder"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/reminder" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/settings" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_log_in"
                android:icon="@drawable/system_login_icon"
                android:title="@string/action_login"/>

            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/system_logout_icon"
                android:title="@string/action_logout"/>
        </menu>
    </item>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
